code cadastro.css

--- a/cadastro.css
+++ b/cadastro.css
@@ -21,6 +21,9 @@ body {
   width: 400px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   position: relative;
+  .container {
+  text-align: center;
+  transform: scale(1.5); 
 }
 
 /* Título */
