--- a/telainicial.css
+++ b/telainicial.css
@@ -14,6 +14,11 @@ body {
     align-items: center;
     justify-content: flex-start;
     height: 100vh;
+    .bottom-section {
+  transform: scale(1.9); 
+  transform-origin: center top; /* centraliza o zoom */
+}
+
 }
 
 .top-section {
